fixed image spacing issues

--- a/client/src/styles/pages/_about.scss
+++ b/client/src/styles/pages/_about.scss
@@ -1,12 +1,12 @@
 .about {
+    // @include pageWrap;
     display: flex;
     align-items: center;
     flex-direction: column;
-    max-width: 100vw;
-    min-height: 100vh;
-    height: 100%;
     text-align: left;
     background-color: $light-background;
+    min-height: 100vh;
+    overflow: hidden;
     &-header {
         display: flex;
         height: 300px;
@@ -38,6 +38,22 @@
     }
 }
 
+@media (min-width: 2000px){
+    .about {
+        &-header {
+            background-size: 100%;
+            height: 600px;
+        }
+    }
+}
+
+@media (min-width: 1440px){
+    .about {
+        &-header {
+            background-size: 100%;
+        }
+    }
+}
 
 @media (max-width: 1024px){
     .about {
@@ -54,7 +70,6 @@
 
 @media (max-width: 767px){
     .about {
-        min-height: calc(100vh - 50px);
         &-header {
             background-size: auto 300px;
             height: 200px;
